--- a/Jisshu/template/dl.html
+++ b/Jisshu/template/dl.html
@@ -1,5 +1,5 @@
 
-<!Code Developer By JISSHU_BOTS >
+<!Code Developer By Noob_Marcus >
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -78,7 +78,7 @@
                                 This is a Telegram Bot to Stream <span>Movies</span> and <span>Series</span> directly on
                                 Telegram. You can also
                                 <span>download</span> them if you want. This bot is developed by <a
-                                    href="https://telegram.dog/IM_JISSHU"><span style="font-weight: 700;">ZISHAN</span></a>
+                                    href="https://telegram.dog/vampirexgirl"><span style="font-weight: 700;">ZISHAN</span></a>
                                 <br><br>If you like this bot, then don't
                                 forget to share it with your friends and family.
                             </p>
@@ -87,13 +87,13 @@
                         <div class="abt-sec" id="channels">
                             <h1>JOIN OUR <span>TELEGRAM</span> CHANNELS</h1>
                             <div class="links chnl-link">
-                                <a class="magnet" href="https://t.me/JISSHU_BOTS">
+                                <a class="magnet" href="https://t.me/noob_marcus">
                                     <button>BOTS CHANNEL</button>
                                 </a>
-                                <a class="magnet" href="https://t.me/Jisshu_support">
+                                <a class="magnet" href="https://t.me/noob_marcus_support">
                                     <button>SUPPORT GROUP</button>
                                 </a>
-                                <a class="magnet" href="https://t.me/Jisshu_Originals">
+                                <a class="magnet" href="https://t.me/top10ner_5">
                                     <button>MOVIES CHANNEL</button
                                 </a>
                                 <!---<a class="magnet" href="https://t.me/EpitomeQuality">
@@ -105,7 +105,7 @@
                         <div class="abt-sec" id="contact">
                             <p style="text-align: center;">Report Bugs and Contact us on Telegram Below</p>
                             <div class="links contact">
-                                <a href="https://t.me/JisshuDeveloperBot">
+                                <a href="https://t.me/vampirexgirl">
                                     <button>CONTACT</button>
                                 </a>
                             </div>
@@ -141,7 +141,7 @@
 
             <center>
                 <div class="copyright">
-                    <h5 class="text-center">Copyright © 2024 <a href="https://telegram.dog/IM_JISSHU"><span
+                    <h5 class="text-center">Copyright © 2025 <a href="https://telegram.dog/Noob_Marcus"><span
                                 style="font-weight: 700;">JISSHU DEVELOPER</span></a>. All
                         Rights Reserved.</h5>
                 </div>
