--- a/Jisshu/template/dl.html
+++ b/Jisshu/template/dl.html
@@ -53,9 +53,6 @@
                     <button class="magnet" onclick="streamDownload()">
                         <img style="height: 30px;" src="https://i.ibb.co/RjzYttX/dl.png" alt="">download video
                     </button>
-                    <button class="magnet" onclick="copyStreamLink()">
-                        <img src="https://i.ibb.co/CM4Y586/link.png" alt="Copy Link">copy link
-                    </button>
                     <button class="magnet" onclick="vlc_player()">
                         <img src="https://i.ibb.co/px6fQs1/vlc.png" alt="">watch in VLC PLAYER
                     </button>
@@ -64,6 +61,9 @@
                     </button>
                     <button class="magnet" onclick="n_player()">
                         <img src="https://i.ibb.co/Hd2dS4t/nPlayer.png" alt="">watch in nPlayer
+                    </button>
+                    <button class="magnet" onclick="copyStreamLink()">
+                        <img src="https://i.ibb.co/CM4Y586/link.png" alt="Copy Link">copy link
                     </button>
                 </div>
 
@@ -78,7 +78,7 @@
                                 This is a Telegram Bot to Stream <span>Movies</span> and <span>Series</span> directly on
                                 Telegram. You can also
                                 <span>download</span> them if you want. This bot is developed by <a
-                                    href="https://telegram.dog/vampirexgirl"><span style="font-weight: 700;">ZISHAN</span></a>
+                                    href="https://telegram.dog/vampirexgirl"><span style="font-weight: 700;">Marcus</span></a>
                                 <br><br>If you like this bot, then don't
                                 forget to share it with your friends and family.
                             </p>
@@ -93,7 +93,7 @@
                                 <a class="magnet" href="https://t.me/noob_marcus_support">
                                     <button>SUPPORT GROUP</button>
                                 </a>
-                                <a class="magnet" href="https://t.me/top10ner_5">
+                                <a class="magnet" href="https://t.me/top10ner_0">
                                     <button>MOVIES CHANNEL</button
                                 </a>
                                 <!---<a class="magnet" href="https://t.me/EpitomeQuality">
@@ -142,7 +142,7 @@
             <center>
                 <div class="copyright">
                     <h5 class="text-center">Copyright © 2025 <a href="https://telegram.dog/Noob_Marcus"><span
-                                style="font-weight: 700;">JISSHU DEVELOPER</span></a>. All
+                                style="font-weight: 700;">Noob Marcus</span></a>. All
                         Rights Reserved.</h5>
                 </div>
             </center>
